--- a/src/appleseed.studio/mainwindow/mainwindow.ui
+++ b/src/appleseed.studio/mainwindow/mainwindow.ui
@@ -24,7 +24,16 @@
   </property>
   <widget class="QWidget" name="main_window_contents">
    <layout class="QGridLayout" name="gridLayout_3">
-    <property name="margin">
+    <property name="leftMargin">
+     <number>0</number>
+    </property>
+    <property name="topMargin">
+     <number>0</number>
+    </property>
+    <property name="rightMargin">
+     <number>0</number>
+    </property>
+    <property name="bottomMargin">
      <number>0</number>
     </property>
     <item row="0" column="0">
@@ -42,7 +51,7 @@
      <x>0</x>
      <y>0</y>
      <width>1280</width>
-     <height>26</height>
+     <height>20</height>
     </rect>
    </property>
    <widget class="QMenu" name="menu_file">
@@ -271,21 +280,10 @@
        <x>0</x>
        <y>0</y>
        <width>198</width>
-       <height>878</height>
+       <height>906</height>
       </rect>
      </property>
     </widget>
-   </widget>
-  </widget>
-  <widget class="QDockWidget" name="python_console">
-   <property name="windowTitle">
-    <string>Python Console</string>
-   </property>
-   <attribute name="dockWidgetArea">
-    <number>8</number>
-   </attribute>
-   <widget class="QWidget" name="python_console_contents">
-    <layout class="QGridLayout" name="gridLayout_10"/>
    </widget>
   </widget>
   <action name="action_file_new_project">
